从知乎爬问题update

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -6,10 +6,12 @@ acceptEncoding = gzip, deflate, br
 accept1 = text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,/;q=0.8,application/signed-exchange;v=b3;q=0.9
 contentType1= "application/x-www-form-urlencoded"
 
-
+#知乎相关开始
 zhihuSpecificSite = site:www.zhihu.com
-zhiUrlPrefix = https://www.zhihu.com/api/v4/search_v3?t=general
+zhihuSearchQuestionUrl = https://www.zhihu.com/api/v4/search_v3?t=general
+zhihuSearchReferUr = https://www.zhihu.com/search?type=content
 zhiHuLoginApi = https://www.zhihu.com/api/v3/oauth/sign_in
+zhiHuQuestionUrl = https://www.zhihu.com/question/
 clientId = c3cef7c66a1843f8b3a9e6a1e3160e20
 grantType = password
 theLang = en
@@ -23,4 +25,6 @@ zhiCaptchaApiCn = https://www.zhihu.com/api/v3/oauth/captcha?lang=cn
 zhiCaptchaApiEn = https://www.zhihu.com/api/v3/oauth/captcha?lang=en
 HAMCShaKey = makemoney
 HmacSHA1 = HmacSHA1
+xZse83 = 3_2.0
 
+#知乎相关结束
