--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -6,6 +6,7 @@ userAgent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML,
 acceptEncoding = gzip, deflate, br
 accept1 = text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,/;q=0.8,application/signed-exchange;v=b3;q=0.9
 contentType1= "application/x-www-form-urlencoded"
+questionOutputPath = src/output/
 
 #知乎相关开始
 zhihuSpecificSite = site:www.zhihu.com
