1.修改程序目录结构 2.保存文件的格式改未.xls

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
-isConnectedByProxy = true
+isConnectedByProxy = false
 hotWordsFilePath = ./hotWordsToQuestion.txt
 zhiHuHotwordsObjPath = ./xZse86Result.json
 baiduUrlPrefix = https://www.baidu.com/s?ie=utf-8
