--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,12 @@
             <version>3.15</version>
         </dependency>
 
-        
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+
     </dependencies>
 
 
