--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,20 @@
                     <target>7</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>modules.zhihu.ZhihuCrawler</mainClass>  // 根据自己类名和路径修改
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <repositories>
@@ -93,6 +107,8 @@
         </dependency>
 
     </dependencies>
+
+
 
 
 </project>
