把程序改为使用jar也可以运行

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,12 +1,12 @@
 isConnectedByProxy = false
-hotWordsFilePath = ./hotWordsToQuestion.txt
-zhiHuHotwordsObjPath = ./xZse86Result.json
+hotWordsFilePath = ./src/main/resources/hotWordsToQuestion.txt
+zhiHuHotwordsObjPath = ./src/main/resources/xZse86Result.json
 baiduUrlPrefix = https://www.baidu.com/s?ie=utf-8
 userAgent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.181 Safari/537.36
 acceptEncoding = gzip, deflate, br
 accept1 = text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,/;q=0.8,application/signed-exchange;v=b3;q=0.9
 contentType1= "application/x-www-form-urlencoded"
-questionOutputPath = src/output/
+questionOutputPath = C:/HaoWu/Output/
 
 #知乎相关开始
 zhihuSpecificSite = site:www.zhihu.com
