--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
             <version>2.12.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
+
     </dependencies>
 
 
