1. hotWordsToQuestin.txt,xZse86Result.json加入ingor文件；2.公司电脑类名红色问题

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 src/output/
+src/main/resources/hotWordsToQuestion.txt
+src/main/resources/xZse86Result.json
