--- a/pom.xml
+++ b/pom.xml
@@ -113,17 +113,17 @@
             <version>1.7</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.tinylog</groupId>
-            <artifactId>tinylog-api</artifactId>
-            <version>2.2.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.tinylog</groupId>-->
+<!--            <artifactId>tinylog-api</artifactId>-->
+<!--            <version>2.2.0</version>-->
+<!--        </dependency>-->
 
-        <dependency>
-            <groupId>org.tinylog</groupId>
-            <artifactId>tinylog-impl</artifactId>
-            <version>2.2.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.tinylog</groupId>-->
+<!--            <artifactId>tinylog-impl</artifactId>-->
+<!--            <version>2.2.0</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.mybatis</groupId>
